--- a/index.html
+++ b/index.html
@@ -377,21 +377,19 @@
             <div class="d-flex justify-content-center align-item-center">
               <div class="icon-circle">
                 <a
-                  href="https://www.facebook.com/share/D9gAzJnbRwSBmyVX/?mibextid=qi2Omg"
-                  target="_blank"
+                  href="#"
                 >
                   <i class="fa-brands fa-facebook-f col-blue"></i
                 ></a>
               </div>
               <div class="icon-circle">
-                <a href="mailto:hussainmughal29@gmail.com"
+                <a href="#"
                   ><i class="fa-solid fa-envelope col-blue"> </i
                 ></a>
               </div>
               <div class="icon-circle">
                 <a
-                  href="https://maps.app.goo.gl/tvdPFrUCwWdbKxjv7"
-                  target="_blank"
+                  href="#"
                 >
                   <i class="fa-solid fa-location-dot col-blue"></i
                 ></a>
